--- a/main_code.ipynb
+++ b/main_code.ipynb
@@ -97,7 +97,105 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IV6SIA-169f0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IV6SIA-169f0",
+        "outputId": "44675b35-4b27-4a2f-95d2-3a3173933153"
+      },
+      "source": [
+        "#lets understand the input we are giving \n",
+        "\n",
+        "print(training_images.shape)     #(total number of pics,height,width of one pic)\n",
+        "\n",
+        "print(training_images[0])  #probably will print the first image    #here we can see that 0s are blank whereas values more than 0 and less than 254 are the hand written digits."
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(60000, 28, 28)\n",
+            "[[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   3  18  18  18 126 136\n",
+            "  175  26 166 255 247 127   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  30  36  94 154 170 253 253 253 253 253\n",
+            "  225 172 253 242 195  64   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0  49 238 253 253 253 253 253 253 253 253 251\n",
+            "   93  82  82  56  39   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0  18 219 253 253 253 253 253 198 182 247 241\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  80 156 107 253 253 205  11   0  43 154\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0  14   1 154 253  90   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0 139 253 190   2   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0  11 190 253  70   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0  35 241 225 160 108   1\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0  81 240 253 253 119\n",
+            "   25   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0  45 186 253 253\n",
+            "  150  27   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  16  93 252\n",
+            "  253 187   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0 249\n",
+            "  253 249  64   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0  46 130 183 253\n",
+            "  253 207   2   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0  39 148 229 253 253 253\n",
+            "  250 182   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0  24 114 221 253 253 253 253 201\n",
+            "   78   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0  23  66 213 253 253 253 253 198  81   2\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0  18 171 219 253 253 253 253 195  80   9   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0  55 172 226 253 253 253 253 244 133  11   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0 136 253 253 253 212 135 132  16   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]\n",
+            " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0   0   0   0]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_db2XHZ5K0qI"
+      },
+      "source": [
+        "#normalise the data, in the scale of 0 to 1. THis makes computation faster and makes neural network remembers the data faster. Very efficient to scale down.\n",
+        "\n",
+        "training_images = training_images/255.0\n",
+        "\n",
+        "test_images = test_images/255.0"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2SA1Ol4vMtrc"
       },
       "source": [
         ""
