--- a/main_code.ipynb
+++ b/main_code.ipynb
@@ -198,6 +198,24 @@
         "id": "2SA1Ol4vMtrc"
       },
       "source": [
+        "model  = tf.keras.models.Sequential([tf.keras.layers.Flatten(input_shape=(28,28)),   #flattens the input image and the layer is of the same size of input image, 28x28. Flatten converts 2d input into 1d input, so it can go to one row of neurons. (remember the diagram - in bookmarks)\n",
+        "                                     tf.keras.layers.Dense(128,activation='relu'), #dense, each neuron of the previous layer is connected to the every neuron in the next layer. 128 neurons are there in the hidden layer and activation function is relu. \n",
+        "                                     tf.keras.layers.Dense(10, activation=tf.nn.softmax)]) #this is the output layer, dense layers are 10. Why? because I have numbers in labels from 0 to 9.\n",
+        "\n",
+        "\n",
+        "#softmax fires the output neuron with maximum/highest probability. Multinomial probability distribution, hence used in multiclass classification problems where membership is required on more than two class labels.\n",
+        "#meanwhile relu keeps he positive and removes the negative. Keeping only positive or directly 0. Relu is linear. Rectified Linear activation function.\n",
+        "\n"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6nqYS7UDjCj4"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
