model: optimizer and loss created

--- a/main_code.ipynb
+++ b/main_code.ipynb
@@ -216,6 +216,20 @@
         "id": "6nqYS7UDjCj4"
       },
       "source": [
+        "model.compile(optimizer= tf.optimizers.Adam(),   #new version uses a new syntax of adam #adamoptimizer is the advanced version of gradient descent\n",
+        "              loss= 'sparse_categorical_crossentropy', \n",
+        "              metrics = ['accuracy'] )   #during training it will print the accuracy after every step\n",
+        "\n"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XJsSaibCk-_8"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
