--- a/Cnn_MNIST.ipynb
+++ b/Cnn_MNIST.ipynb
@@ -257,9 +257,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LgJc7gcA8H_U"
+      },
+      "source": [
+        "Normalise the dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6C4J-WFP6bkQ"
+      },
+      "source": [
+        "training_images = training_images/255.0\n",
+        "\n",
+        "test_images = test_images/255.0"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3hv-kn_08YFA"
       },
       "source": [
         ""
