--- a/Cnn_MNIST.ipynb
+++ b/Cnn_MNIST.ipynb
@@ -284,6 +284,32 @@
         "id": "3hv-kn_08YFA"
       },
       "source": [
+        "#creating the model\n",
+        "\n",
+        "cnn = models.Sequential([\n",
+        "                         #conv\n",
+        "                         layers.Conv2D(filters=32, kernel_size=(3,3), activation=\"relu\", input_shape=(28,28,3)),\n",
+        "                         layers.MaxPooling2D((2,2)),\n",
+        "\n",
+        "      \n",
+        "                         #conv2\n",
+        "                         layers.Conv2D(filters=32, kernel_size=(3,3), activation=\"relu\", input_shape=(28,28,3)),\n",
+        "                         layers.MaxPooling2D((2,2)),\n",
+        "\n",
+        "                         #dense\n",
+        "                         layers.Flatten(),\n",
+        "                         layers.Dense(64,activation='relu'),\n",
+        "                         layers.Dense(10,activation='softmax')])"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uczLL_SUCJnA"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
