--- a/Cnn_MNIST.ipynb
+++ b/Cnn_MNIST.ipynb
@@ -26,7 +26,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BJZOrmqSzkdI",
-        "outputId": "625b1c0a-1534-43a0-f9e3-84f7fa095edf"
+        "outputId": "41955280-7652-4516-e674-8377be44f93b"
       },
       "source": [
         "objects = tf.keras.datasets.mnist\n",
@@ -45,8 +45,17 @@
         "\n",
         "training_images.shape #by this I got the shape of the training sample,"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n",
+            "11501568/11490434 [==============================] - 0s 0us/step\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -66,12 +75,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cYbYkooj0XSQ",
-        "outputId": "1b99d265-9364-4d42-a988-aab40e76e261"
+        "outputId": "1a415c34-ec3b-4e2e-b134-6bb0d2d91db7"
       },
       "source": [
         "test_images.shape"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -81,7 +90,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -102,14 +111,14 @@
           "height": 268
         },
         "id": "E7VzxFJX2g4g",
-        "outputId": "37545032-cd34-45c4-c785-0c7746a6a656"
+        "outputId": "22570233-c939-4d04-f9ef-848dd1ea2bb1"
       },
       "source": [
         "for i in range(9):\n",
         "  plt.subplot(330+1+i)    #subplot space generated\n",
         "  plt.imshow(training_images[i])       #plotting raw pixel in respective indices during each loop/iteration"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -133,7 +142,7 @@
           "height": 268
         },
         "id": "9Bv6rdbK39N4",
-        "outputId": "3b93ebf7-9d1b-4fa0-8861-197f2e78ae24"
+        "outputId": "667ebe32-06b8-47b1-fb54-2b8e1addcb4f"
       },
       "source": [
         "#another subplot for next 9 digits\n",
@@ -142,7 +151,7 @@
         "  plt.subplot(330+1+i)\n",
         "  plt.imshow(training_images[i+9])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -166,7 +175,7 @@
           "height": 1000
         },
         "id": "l9nMm6QK5ilY",
-        "outputId": "454be453-093f-4c9c-d39d-414f54fe35a7"
+        "outputId": "74581563-b5a3-4a41-9341-57c36b71075b"
       },
       "source": [
         "print(training_labels[9])     #gives integral value\n",
@@ -176,7 +185,7 @@
         "print(plt.imshow(training_images[9]))   #pyplot prints the handwritten image\n",
         "\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,11 +280,37 @@
         "id": "6C4J-WFP6bkQ"
       },
       "source": [
-        "training_images = training_images/255.0\n",
+        "training_images = training_images/255\n",
         "\n",
-        "test_images = test_images/255.0"
+        "test_images = test_images/255"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "awl_ClDNFbkA"
+      },
+      "source": [
+        "#as cnn takes in the images which are in the format of height, widht and channel, we need to resize the dataset\n",
+        "\n",
+        "\n",
+        "training_images= training_images.reshape(-1,28,28,1)  #-1 adds a dimension for occupying the batch size, which is generally 32 and hence final batch for iteration will look like (32,28,28,1) which means, 32 is the size and 1 is the channel as it is grayscale.\n",
+        "\n"
       ],
       "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E2HJFmh2GBVM"
+      },
+      "source": [
+        "test_images = test_images.reshape(-1,28,28,1)"
+      ],
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -288,20 +323,20 @@
         "\n",
         "cnn = models.Sequential([\n",
         "                         #conv\n",
-        "                         layers.Conv2D(filters=32, kernel_size=(3,3), activation=\"relu\", input_shape=(28,28,3)),\n",
+        "                         layers.Conv2D(filters=30, kernel_size=(3,3), activation='relu', input_shape=(28,28,1)),\n",
         "                         layers.MaxPooling2D((2,2)),\n",
         "\n",
-        "      \n",
         "                         #conv2\n",
-        "                         layers.Conv2D(filters=32, kernel_size=(3,3), activation=\"relu\", input_shape=(28,28,3)),\n",
+        "                         layers.Conv2D(filters=30, kernel_size=(3,3), activation='relu', input_shape=(28,28,1)),\n",
         "                         layers.MaxPooling2D((2,2)),\n",
+        "\n",
         "\n",
         "                         #dense\n",
         "                         layers.Flatten(),\n",
-        "                         layers.Dense(64,activation='relu'),\n",
-        "                         layers.Dense(10,activation='softmax')])"
+        "                         layers.Dense(100, activation='relu'),\n",
+        "                         layers.Dense(10, activation='sigmoid')])"
       ],
-      "execution_count": 28,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -310,10 +345,113 @@
         "id": "uczLL_SUCJnA"
       },
       "source": [
-        ""
+        "cnn.compile(optimizer='adam',\n",
+        "            loss='sparse_categorical_crossentropy',\n",
+        "            metrics=['accuracy'])\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z5wc7Wp2Hvi0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b490130d-9e2e-49e8-9a6a-317761dbdd00"
+      },
+      "source": [
+        "cnn.fit(training_images, training_labels, epochs=5)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 42s 22ms/step - loss: 0.6990 - accuracy: 0.7736\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 42s 22ms/step - loss: 0.2429 - accuracy: 0.9251\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 42s 23ms/step - loss: 0.1625 - accuracy: 0.9507\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 42s 23ms/step - loss: 0.1243 - accuracy: 0.9622\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 42s 22ms/step - loss: 0.1039 - accuracy: 0.9680\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f2f8ee4eb90>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zLIjTJOR0agA",
+        "outputId": "9b953b00-4507-4d7c-8520-28ee9a9734d7"
+      },
+      "source": [
+        "training_labels[:5]"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 0, 4, 1, 9], dtype=uint8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dTzxsvGSHSuk",
+        "outputId": "ec71d1f4-332a-4849-bce5-b874de3e8d12"
+      },
+      "source": [
+        "cnn.evaluate(test_images, test_labels)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 2s 7ms/step - loss: 0.0877 - accuracy: 0.9740\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.087701715528965, 0.9739999771118164]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     }
   ]
 }
